#time 2h 0m adding top section of full marketing site

--- a/site/index.html
+++ b/site/index.html
@@ -25,7 +25,48 @@
             <section class="home-intro">
                 <nav class="top-nav">
                     <img src="static/images/logos/true-logo-dark.svg" />
+                    <ul class="top-nav__menu">
+                        <li class="top-nav__item">
+                            <div class="language-selector">
+                                <div class="language-selector__current">
+                                    <div class="language-selector__arrow"></div>
+                                    EN
+                                </div>
+                                <div class="language-selector__layer">
+                                    
+                                </div>
+                            </div>
+                        </li>
+                        <li class="top-nav__item">
+                            <a href="#">What is True?</a>
+                        </li>
+                        <li class="top-nav__item">
+                            <a href="#">Team</a>
+                        </li>
+                        <li class="top-nav__item">
+                            <a href="#">Key Dates</a>
+                        </li>
+                    </ul>
                 </nav>
+
+                <div class="home-header">
+                    <h1>Facebook can’t be fixed, so we’re going to replace it.</h1>
+                    <p>Our mission is to create a better social community that focuses on authenticity, meaningful connections, and helping the world share their experiences in a meaningful way that respects thier privacy.</p>
+                    <div class="home-header__cta">
+                        <a href="#" class="button button--alt">Pre Buy Coins</a>
+                        <a href="#" class="button">Get The Whitepaper</a>
+                    </div>
+
+                    <div class="presale-countdown">
+                        <div class="presale-countdown__header">Pre Sale Starts on:</div>
+                        <div class="presale-countdown__subheader">Oct 27, 2018</div>
+                    </div>
+                </div>
+                <div class="header-bg-1"></div>
+                <div class="header-bg-2"></div>
+                <div class="header-bg-3"></div>
+                <div class="header-bg-4"></div>
+                <div class="header-bg-5"></div>
             </section>
         </div>
 
