#time 1h 0m getting header parallaxing working.

--- a/site/index.html
+++ b/site/index.html
@@ -63,10 +63,10 @@
                     </div>
                 </div>
                 <div class="header-bg-1"></div>
-                <div class="header-bg-2"></div>
-                <div class="header-bg-3"></div>
-                <div class="header-bg-4"></div>
-                <div class="header-bg-5"></div>
+                <div class="home-parallax header-bg-2"></div>
+                <div class="home-parallax header-bg-3"></div>
+                <div class="home-parallax header-bg-4"></div>
+                <div class="home-parallax header-bg-5"></div>
             </section>
         </div>
 
