#time 2h 0m adding countdown timer and cleaning up parallaxer

--- a/site/index.html
+++ b/site/index.html
@@ -57,16 +57,41 @@
                         <a href="#" class="button">Get The Whitepaper</a>
                     </div>
 
-                    <div class="presale-countdown">
+                    <div id="countdownContainer" class="presale-countdown">
                         <div class="presale-countdown__header">Pre Sale Starts on:</div>
                         <div class="presale-countdown__subheader">Oct 27, 2018</div>
+                        <div class="presale-countdown__counter">
+                            <div class="presale-countdown__slot">
+                                <span id="counterDays">&nbsp;</span>
+                                <div class="presale-countdown__label">Days</div>
+                            </div>
+                            <div class="presale-countdown__slot -hours">
+                                <span id="counterHours">&nbsp;</span>
+                                <div class="presale-countdown__label">Hours</div>
+                            </div>
+                            <div class="presale-countdown__slot -minutes">
+                                <span id="counterMinutes">&nbsp;</span>
+                                <div class="presale-countdown__label">Minutes</div>
+                            </div>
+                            <div class="presale-countdown__slot -minutes">
+                                <span id="counterSeconds">&nbsp;</span>
+                                <div class="presale-countdown__label">Seconds</div>
+                            </div>
+                        </div>
+                        <div class="presale-countdown__cta">
+                            <a href="#" class="button">Set Reminder</a>
+                        </div>
                     </div>
                 </div>
                 <div class="header-bg-1"></div>
                 <div class="home-parallax header-bg-2"></div>
                 <div class="home-parallax header-bg-3"></div>
                 <div class="home-parallax header-bg-4"></div>
+                <div class="home-parallax__mask"></div>
                 <div class="home-parallax header-bg-5"></div>
+            </section>
+            <section class="home-video">
+
             </section>
         </div>
 
