--- a/site/index.html
+++ b/site/index.html
@@ -91,7 +91,14 @@
                 <div class="home-parallax header-bg-5"></div>
             </section>
             <section class="home-video">
-
+                <div class="home-video__container">
+                    <div class="home-video__header">What Is True?</div>
+                    <video width="714" height="407" controls poster="static/images/poster.png">
+                        <source src="static/video/true-intro.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </section>
         </div>
 
