#time 1h 0m adding infographic section

--- a/site/index.html
+++ b/site/index.html
@@ -100,6 +100,36 @@
                     </video>
                 </div>
             </section>
+            <section class="social-media">
+                <div class="social-media__row">
+                    <div class="social-media__col">
+                        <h2 class="social-media__header">
+                            WHY IS SOCIAL NETWORKING BROKEN?
+                        </h2>
+                        <p>The largest social media platforms have become surveillance empires that prepetually manipulate your attention, secretly harvest your personal data and influence your behavior in order to profit.</p>
+                    </div>
+                    <div class="social-media__col">
+                        <div class="social-media__infographic">
+                            <div class="social-media__tag">
+                                <img src="static/images/icons/icon-eye.svg" />
+                                <strong>Big Brother</strong>
+                                Surveillance
+                            </div>
+                            <div class="social-media__tag">
+                                <img src="static/images/icons/icon-warning.svg" />
+                                <strong>Privacy Leaks</strong>
+                                Leaks
+                            </div>
+                            <div class="social-media__tag">
+                                <img src="static/images/icons/icon-paper.svg" />
+                                <strong>Influence</strong>
+                                Fake News
+                            </div>
+                            <img class="cyclist" src="static/images/cyclist.png" />
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
 
         <script src="static/js/app.js?cache=bust2"></script>
