#time 2h 0m adding roadmap and privacy sections

--- a/site/index.html
+++ b/site/index.html
@@ -110,17 +110,17 @@
                     </div>
                     <div class="social-media__col">
                         <div class="social-media__infographic">
-                            <div class="social-media__tag">
+                            <div class="social-media__tag -brother">
                                 <img src="static/images/icons/icon-eye.svg" />
                                 <strong>Big Brother</strong>
                                 Surveillance
                             </div>
-                            <div class="social-media__tag">
+                            <div class="social-media__tag -leaks">
                                 <img src="static/images/icons/icon-warning.svg" />
-                                <strong>Privacy Leaks</strong>
+                                <strong>Privacy</strong>
                                 Leaks
                             </div>
-                            <div class="social-media__tag">
+                            <div class="social-media__tag -fakenews">
                                 <img src="static/images/icons/icon-paper.svg" />
                                 <strong>Influence</strong>
                                 Fake News
@@ -128,6 +128,80 @@
                             <img class="cyclist" src="static/images/cyclist.png" />
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <section class="market-cap">
+                <div class="current-stage__label">STAGE 1 CAP 100 M</div>
+                <div class="current-stage">
+                    <img class="current-stage__logo" src="static/images/logos/true-logo-blue.svg" />
+                    <div class="current-stage__header">CURRENT STAGE: PUBLIC PRE-SALE ($0.14 FIXED PRICE)</div>
+                    <div class="current-stage__subheader">
+                        <span>STARTING PRICE: $0.20</span>
+                        <img src="static/images/icons/icon-cap-bounds.svg" />
+                        <span>UPPER BOUND: $20.00</span>
+                    </div>
+                    <div class="current-stage__meter">
+                        <div class="current-stage__widget"></div>
+                    </div>
+                    <div class="current-stage__bullet">
+                        <ul>
+                            <li class="current-stage__bullet-item -active">43M SOLD IN PRIVATE PRE SALE</li>
+                            <li class="current-stage__bullet-item">57 M TO BE DISTRIBUTED IN PUBLIC PRE SALE</li>
+                        </ul>
+                    </div>
+                    <a class="current-stage__help" href="//www.google.com" target="_blank"><img src="static/images/icons/icon-help.svg" /></a>
+                </div>
+            </section>
+
+            <section class="roadmap">
+                <div class="roadmap-header">
+                    <h2>The Roadmap</h2>
+                </div>
+                <div class="roadmap-map">
+                    <div class="roadmap-map__line"></div>
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Q2</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet"></div>
+                        <div class="roadmap-map__description">Token Launch</div>
+                    </div>
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Milestone 1</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet -bullet2"></div>
+                        <div class="roadmap-map__description">100K USD CONSENSUS NETWORK</div>
+                    </div>
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Q3</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet -bullet3"></div>
+                        <div class="roadmap-map__description">TRUE APP</div>
+                    </div>
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Q3</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet -bullet4"></div>
+                        <div class="roadmap-map__description">CONSENSUS NETWORK LAUNCH</div>
+                    </div>
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Q2</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet -bullet5"></div>
+                        <div class="roadmap-map__description">INITIAL PRICE FORMATION</div>
+                    </div>
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Q3</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet -bullet6"></div>
+                        <div class="roadmap-map__description">True Wallet</div>
+                    </div>                 
+                    <div class="roadmap-map__item">
+                        <div class="roadmap-map__label">Q3</div>
+                        <div class="roadmap-map__bullet--mask"></div>
+                        <div class="roadmap-map__bullet -bullet7"></div>
+                        <div class="roadmap-map__description">$50 M USD</div>
+                    </div> 
                 </div>
             </section>
         </div>
