--- a/site/index.html
+++ b/site/index.html
@@ -203,6 +203,38 @@
                         <div class="roadmap-map__description">$50 M USD</div>
                     </div> 
                 </div>
+                <div class="roadmap-graphs">
+                    <div class="roadmap-graphs__col">
+                        <h3>Token Distribution</h3>
+                        <img class="roadmap-graphs__svg" src="static/images/roadmap/data-viz1.svg" />
+                    </div>
+                    <div class="roadmap-graphs__col">
+                        <ul class="roadmap-graphs__ul roadmap-graphs__ul--right">
+                            <li class="roadmap-graphs__item">35% CROWDS</li>
+                            <li class="roadmap-graphs__item">25% FOUNDATION</li>
+                            <li class="roadmap-graphs__item">24% CORPORATION</li>
+                            <li class="roadmap-graphs__item">10% REWARD POOL</li>
+                            <li class="roadmap-graphs__item">7% TEAMS & ADVISORS</li>
+                            <li class="roadmap-graphs__item">1% TRANSACTION COST</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="roadmap-graphs">
+                    <div class="roadmap-graphs__col">
+                            <ul class="roadmap-graphs__ul roadmap-graphs__ul--left">
+                                <li class="roadmap-graphs__item">40% R&D SOFTWARE</li>
+                                <li class="roadmap-graphs__item">25% ECOSYSTEM DEVELOPMENT</li>
+                                <li class="roadmap-graphs__item">20% PARTNERSHIP & MARKETING</li>
+                                <li class="roadmap-graphs__item">10% RESERVE</li>
+                                <li class="roadmap-graphs__item">10% LEGAL</li>
+                                <li class="roadmap-graphs__item">5% OPERATIONS</li>
+                            </ul>
+                        </div>
+                    <div class="roadmap-graphs__col">
+                        <h3>Use of Proceeds</h3>
+                        <img class="roadmap-graphs__svg" src="static/images/roadmap/data-viz2.svg" />
+                    </div>
+                </div>
             </section>
         </div>
 
