#time 2h 0m adding "in the news" with responsive carousel

--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
         <link rel="icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         -->
         <script src="static/js/vendors.js?cache=bust3"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <link rel="stylesheet" href="static/css/styles.css?cache=bust3">
     </head>
     <body>
@@ -203,41 +204,85 @@
                         <div class="roadmap-map__description">$50 M USD</div>
                     </div> 
                 </div>
-                <div class="roadmap-graphs">
-                    <div class="roadmap-graphs__col">
-                        <h3>Token Distribution</h3>
-                        <img class="roadmap-graphs__svg" src="static/images/roadmap/data-viz1.svg" />
-                    </div>
-                    <div class="roadmap-graphs__col">
-                        <ul class="roadmap-graphs__ul roadmap-graphs__ul--right">
-                            <li class="roadmap-graphs__item">35% CROWDS</li>
-                            <li class="roadmap-graphs__item">25% FOUNDATION</li>
-                            <li class="roadmap-graphs__item">24% CORPORATION</li>
-                            <li class="roadmap-graphs__item">10% REWARD POOL</li>
-                            <li class="roadmap-graphs__item">7% TEAMS & ADVISORS</li>
-                            <li class="roadmap-graphs__item">1% TRANSACTION COST</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="roadmap-graphs">
-                    <div class="roadmap-graphs__col">
-                            <ul class="roadmap-graphs__ul roadmap-graphs__ul--left">
-                                <li class="roadmap-graphs__item">40% R&D SOFTWARE</li>
-                                <li class="roadmap-graphs__item">25% ECOSYSTEM DEVELOPMENT</li>
-                                <li class="roadmap-graphs__item">20% PARTNERSHIP & MARKETING</li>
-                                <li class="roadmap-graphs__item">10% RESERVE</li>
-                                <li class="roadmap-graphs__item">10% LEGAL</li>
-                                <li class="roadmap-graphs__item">5% OPERATIONS</li>
+                <div class="roadmap-graphs__container">
+                    <div class="roadmap-graphs">
+                        <div class="roadmap-graphs__col">
+                            <h3>Token Distribution</h3>
+                            <img class="roadmap-graphs__svg" src="static/images/roadmap/data-viz1.svg" />
+                        </div>
+                        <div class="roadmap-graphs__col">
+                            <ul class="roadmap-graphs__ul roadmap-graphs__ul--right">
+                                <li class="roadmap-graphs__item">35% CROWDS</li>
+                                <li class="roadmap-graphs__item">25% FOUNDATION</li>
+                                <li class="roadmap-graphs__item">24% CORPORATION</li>
+                                <li class="roadmap-graphs__item">10% REWARD POOL</li>
+                                <li class="roadmap-graphs__item">7% TEAMS & ADVISORS</li>
+                                <li class="roadmap-graphs__item">1% TRANSACTION COST</li>
                             </ul>
                         </div>
-                    <div class="roadmap-graphs__col">
-                        <h3>Use of Proceeds</h3>
-                        <img class="roadmap-graphs__svg" src="static/images/roadmap/data-viz2.svg" />
+                    </div>
+                    <div class="roadmap-graphs">
+                        <div class="roadmap-graphs__col">
+                                <ul class="roadmap-graphs__ul roadmap-graphs__ul--left">
+                                    <li class="roadmap-graphs__item">40% R&D SOFTWARE</li>
+                                    <li class="roadmap-graphs__item">25% ECOSYSTEM DEVELOPMENT</li>
+                                    <li class="roadmap-graphs__item">20% PARTNERSHIP & MARKETING</li>
+                                    <li class="roadmap-graphs__item">10% RESERVE</li>
+                                    <li class="roadmap-graphs__item">10% LEGAL</li>
+                                    <li class="roadmap-graphs__item">5% OPERATIONS</li>
+                                </ul>
+                            </div>
+                        <div class="roadmap-graphs__col">
+                            <h3>Use of Proceeds</h3>
+                            <img class="roadmap-graphs__svg" src="static/images/roadmap/data-viz2.svg" />
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="true-news">
+                <h2>True In The News</h2>
+                <div class="news-carousel__container">
+                    <a href="#" class="news-carousel__nav -previous">
+                        <img src="static/images/icons/icon-left-arrow.svg" />
+                    </a>
+                    <a href="#" class="news-carousel__nav -next">
+                        <img src="static/images/icons/icon-right-arrow.svg" />
+                    </a>
+                    <div id="newsCarousel" class="news-carousel">
+                        <div class="news-carousel__item">
+                            <div class="news-carousel__item--inner">
+                                <img src="static/images/logos/logo-huffington-post.png" />
+                                <p>Crypto powers social network, launches digital token aimed at powering social interactions.</p>
+                                <a href="#" class="button button-news">View Article</a>
+                            </div>
+                        </div>
+                        <div class="news-carousel__item">
+                            <div class="news-carousel__item--inner">
+                                <img src="static/images/logos/logo-techcrunch.png" />
+                                <p>True is raising $100M to take on Facebook and other social media platforms, its the first of its kind to do an ICO.</p>
+                                <a href="#" class="button button-news">View Article</a>
+                            </div>
+                        </div>
+                        <div class="news-carousel__item">
+                            <div class="news-carousel__item--inner">
+                                <img src="static/images/logos/logo-ico-alert.png" />
+                                <p>ICO Alerta: True Coins, its the first established social networking platform to do an ICO.</p>
+                                <a href="#" class="button button-news">View Article</a>
+                            </div>
+                        </div>
+                        <div class="news-carousel__item">
+                            <div class="news-carousel__item--inner">
+                                <img src="static/images/logos/logo-ico-alert.png" />
+                                <p>ICO Alerta: True Coins, its the first established social networking platform to do an ICO.</p>
+                                <a href="#" class="button button-news">View Article</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
         </div>
-
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script src="static/js/app.js?cache=bust3"></script>
     </body>
 </html>
