#time 1h 0m adding "The Team" section

--- a/site/index.html
+++ b/site/index.html
@@ -14,9 +14,9 @@
         <link rel="shortcut icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         <link rel="icon" href="https://s3.amazonaws.com/shyftassets/images/favicon.png" type="image/x-icon">
         -->
-        <script src="static/js/vendors.js?cache=bust3"></script>
+        <script src="static/js/vendors.js?cache=bust4"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-        <link rel="stylesheet" href="static/css/styles.css?cache=bust3">
+        <link rel="stylesheet" href="static/css/styles.css?cache=bust4">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -281,8 +281,58 @@
                     </div>
                 </div>
             </section>
+
+            <section class="true-team">
+                <h2>The Team</h2>
+                <div class="team-protraits">
+                    <div class="team-protraits-col">
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--image -bret"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Bret Cox<br />
+                                    Co-Founder &amp; CEO
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-portraits__item">
+                            <div class="team-portraits__item--image -dmitri"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Dmitri Maruhh<br />
+                                    Backend Engineer
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-protraits-col">
+                        <div class="team-portraits__item">
+
+                        </div>
+                        <div class="team-portraits__item">
+
+                        </div>
+                    </div>
+                    <div class="team-protraits-col">
+                        <div class="team-portraits__item">
+
+                        </div>
+                        <div class="team-portraits__item">
+
+                        </div>
+                    </div>
+                    <div class="team-protraits-col">
+                        <div class="team-portraits__item">
+
+                        </div>
+                        <div class="team-portraits__item">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script src="static/js/app.js?cache=bust3"></script>
+        <script src="static/js/app.js?cache=bust4"></script>
     </body>
 </html>
