#time 1h 30m adding team section

--- a/site/index.html
+++ b/site/index.html
@@ -307,26 +307,68 @@
                     </div>
                     <div class="team-protraits-col">
                         <div class="team-portraits__item">
-
+                            <div class="team-portraits__item--image -ilya"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Ilya Radyukhin
+                                    <br />
+                                    Founding Mobile Engineer
+                                </div>
+                            </div>
                         </div>
                         <div class="team-portraits__item">
-
+                            <div class="team-portraits__item--image -stanislav"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Stanislav Mischenko
+                                    <br />
+                                    Senior Mobile Engineer
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="team-protraits-col">
                         <div class="team-portraits__item">
-
+                            <div class="team-portraits__item--image -ryan"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Ryan Cox
+                                    <br />
+                                    Director of Marketing
+                                </div>
+                            </div>
                         </div>
                         <div class="team-portraits__item">
-
+                            <div class="team-portraits__item--image -roman"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Roman Dobrynin
+                                    <br />
+                                    Web Front End Engineer
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="team-protraits-col">
                         <div class="team-portraits__item">
-
+                            <div class="team-portraits__item--image -rustam"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Rustam Nadrshin
+                                    <br />
+                                    iOS Engineer
+                                </div>
+                            </div>
                         </div>
                         <div class="team-portraits__item">
-
+                            <div class="team-portraits__item--image -kori"></div>
+                            <div class="team-portraits__item--hover">
+                                <div class="team-portraits__item--bio">
+                                    Kori Handy
+                                    <br />
+                                    Lead Product Designer
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
