#time 1h 0m adding better animations to the header section

--- a/site/index.html
+++ b/site/index.html
@@ -68,11 +68,13 @@
                 </nav>
 
                 <div class="home-header">
-                    <h1>Facebook can’t be fixed, so we’re going to replace it.</h1>
-                    <p>Our mission is to create a better social community that focuses on authenticity, meaningful connections, and helping the world share their experiences in a meaningful way that respects thier privacy.</p>
-                    <div class="home-header__cta">
-                        <a href="#" class="button button--alt">Pre Buy Coins</a>
-                        <a href="#" class="button">Get The Whitepaper</a>
+                    <div class="home-header-scroller">
+                        <h1>Facebook can’t be fixed, so we’re going to replace it.</h1>
+                        <p>Our mission is to create a better social community that focuses on authenticity, meaningful connections, and helping the world share their experiences in a meaningful way that respects thier privacy.</p>
+                        <div class="home-header__cta">
+                            <a href="#" class="button button--alt">Pre Buy Coins</a>
+                            <a href="#" class="button">Get The Whitepaper</a>
+                        </div>
                     </div>
 
                     <div id="countdownContainer" class="presale-countdown">
