#time 1h 0m adding main features section

--- a/site/index.html
+++ b/site/index.html
@@ -253,6 +253,44 @@
                 </div>
             </section>
 
+            <section class="home-main-features">
+                <h2>Features</h2>
+                <div class="main-features__phones">
+
+                </div>
+                <div class="main-features__container">
+                    <div class="home-main-features__inner">
+                        <div class="feature-phone-item">
+                            <h3>Be Real</h3>
+                            <p>True is about sharing genuine moments with your best friends.</p>
+                            <p>It’s not a place for news or political arguments, it's for connecting and staying in touch with the people you care most about.</p>
+                        </div>
+                        <div class="feature-phone-item">
+                            <h3>Stay True</h3>
+                            <p>Social media has become a phony place. Fake news, fake friends and big brands paying for your eyeballs.</p>
+                            <p>We don't do that.</p>
+                        </div>
+                        <div class="feature-phone-item">
+                            <h3>Moments</h3>
+                            <p>True is original content and real sharing by real people, with features you haven't seen before like Days - an automatic story built by your location and motion to share.</p>
+                        </div>
+                        <div class="feature-phone-item">
+                            <h3>Be Honest</h3>
+                            <p>What's the best part about checking your feed? Updates from real friends.</p>
+                            <p>That's all we do.</p>
+                        </div>
+                        <div class="feature-phone-item">
+                            <h3>It's Free</h3>
+                            <p>Live location sharing with total privacy controls are included for the first time in a social network to keep up and stay connected to the ones you love.</p>
+                        </div>
+                        <div class="feature-phone-item">
+                            <h3>Private & Safe</h3>
+                            <p>Respect for privacy and sharing control are cornerstones of the user experience. Powerful controls allow you to be sure how you share and who sees your posts.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
             <section class="market-cap">
                 <div class="current-stage__label">STAGE 1 CAP 100 M</div>
                 <div class="current-stage">
