#time 2h 0m adding phone carousel and some mobil optimization

--- a/site/index.html
+++ b/site/index.html
@@ -255,8 +255,22 @@
 
             <section class="home-main-features">
                 <h2>Features</h2>
-                <div class="main-features__phones">
-
+                <div class="phone-carousel">
+                    <div class="phone-item phone-1">
+                        <img src="static/images/features/phone-3.png" />
+                    </div>
+                    <div class="phone-item phone-4">
+                        <img src="static/images/features/phone-2.png" />
+                    </div>
+                    <div class="phone-item phone-3">
+                            <img src="static/images/features/phone-1.png" />
+                    </div>
+                    <div class="phone-item phone-2">
+                        <img src="static/images/features/phone-4.png" />
+                    </div>
+                    <div class="phone-item phone-5">
+                        <img src="static/images/features/phone-5.png" />
+                    </div>
                 </div>
                 <div class="main-features__container">
                     <div class="home-main-features__inner">
