#time 1h 0m adding token sale section

--- a/site/index.html
+++ b/site/index.html
@@ -304,27 +304,30 @@
                     </div>
                 </div>
             </section>
-            
+            <section class="download-cta">
+                <h2>Try True & See The Difference</h2>
+                <a href="#"><img src="static/images/buttons/button-appstore.png" width="157" /></a>
+                <a href="#"><img src="static/images/buttons/button-google-play.png" width="157" /></a>
+            </section>
             <section class="market-cap">
-                <div class="current-stage__label">STAGE 1 CAP 100 M</div>
+                <h2>Token Sale</h2>
+                <div class="current-stage__label">Stage 1: 5M (Soft Cap)</div>
                 <div class="current-stage">
-                    <img class="current-stage__logo" src="static/images/logos/true-logo-blue.svg" />
-                    <div class="current-stage__header">CURRENT STAGE: PUBLIC PRE-SALE ($0.14 FIXED PRICE)</div>
-                    <div class="current-stage__subheader">
-                        <span>STARTING PRICE: $0.20</span>
-                        <img src="static/images/icons/icon-cap-bounds.svg" />
-                        <span>UPPER BOUND: $20.00</span>
-                    </div>
+                    <div class="current-stage__header">Current Stage: Private Pre-sale</div>
                     <div class="current-stage__meter">
                         <div class="current-stage__widget"></div>
                     </div>
                     <div class="current-stage__bullet">
                         <ul>
-                            <li class="current-stage__bullet-item -active">43M SOLD IN PRIVATE PRE SALE</li>
-                            <li class="current-stage__bullet-item">57 M TO BE DISTRIBUTED IN PUBLIC PRE SALE</li>
+                            <li class="current-stage__bullet-item -active">5M Allocated In Private Pre-Sale</li>
+                            <li class="current-stage__bullet-item">44M To Be Distributed In Public Sale</li>
                         </ul>
                     </div>
-                    <a class="current-stage__help" href="//www.google.com" target="_blank"><img src="static/images/icons/icon-help.svg" /></a>
+                    <div class="current-stage__subheader">
+                        <span>STARTING PRICE: $0.20</span>
+                        <img src="static/images/icons/icon-cap-bounds.svg" />
+                        <span>UPPER BOUND: TBD</span>
+                    </div>
                 </div>
             </section>
 
